--- a/particles/package.json
+++ b/particles/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@types/three": "^0.178.1",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-glsl": "^1.5.1"
   },
   "dependencies": {
     "lil-gui": "^0.20.0",
