--- a/particles/tsconfig.json
+++ b/particles/tsconfig.json
@@ -19,7 +19,9 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "types": ["vite-plugin-glsl/ext"]
   },
   "include": ["src"]
 }
